Authentication update on the way

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Bento Starter",
-  "short_name": "Bento",
+  "name": "ShowYourCat",
+  "short_name": "",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
