--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue": "^2.6.10",
     "vue-head": "^2.1.1",
     "vue-router": "^3.0.6",
+    "vue-star-rating": "^1.6.1",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
