--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pwacompat": "^2.0.9",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-advanced-cropper": "^0.16.0",
     "vue-head": "^2.1.1",
     "vue-router": "^3.0.6",
     "vue-star-rating": "^1.6.1",
