--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "node": ">=9.3.0"
   },
   "dependencies": {
+    "@tensorflow-models/coco-ssd": "^2.0.1",
+    "@tensorflow/tfjs-converter": "^1.7.0",
+    "@tensorflow/tfjs-core": "^1.7.0",
+    "base64-to-jpg": "^1.0.1",
     "core-js": "^3.1.3",
     "downscale": "^1.0.6",
     "firebase": "^6.0.4",
