--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tensorflow-models/coco-ssd": "^2.0.1",
     "@tensorflow/tfjs-converter": "^1.7.0",
     "@tensorflow/tfjs-core": "^1.7.0",
+    "animate.css": "^4.1.0",
     "base64-to-jpg": "^1.0.1",
     "core-js": "^3.1.3",
     "downscale": "^1.0.6",
