--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,12 @@
     "headers": [
       {
         "source": "/service-worker.js",
-        "headers": [{ "key": "Cache-Control", "value": "no-cache" }]
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          }
+        ]
       },
       {
         "source": "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
@@ -37,12 +42,33 @@
       }
     ],
     "public": "dist/",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "**",
         "destination": "/index.html"
       }
     ]
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ],
+    "source": "functions"
+  },
+  "emulators": {
+    "functions": {
+      "port": "5001"
+    },
+    "firestore": {
+      "port": "8080"
+    },
+    "hosting": {
+      "port": 5000
+    }
   }
 }
