--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^3.1.3",
     "downscale": "^1.0.6",
     "firebase": "^6.0.4",
+    "firebase-admin": "^8.12.1",
     "is_js": "^0.9.0",
     "lodash": "^4.17.15",
     "pwacompat": "^2.0.9",
