--- a/firebase.json
+++ b/firebase.json
@@ -69,6 +69,12 @@
     },
     "hosting": {
       "port": 5000
+    },
+    "database": {
+      "port": 9000
+    },
+    "ui": {
+      "enabled": true
     }
   }
 }
