--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.15",
     "pwacompat": "^2.0.9",
     "register-service-worker": "^1.6.2",
+    "svg-loader": "0.0.2",
     "vue": "^2.6.10",
     "vue-advanced-cropper": "^0.16.0",
     "vue-head": "^2.1.1",
