--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^6.0.4",
     "firebase-admin": "^8.12.1",
     "is_js": "^0.9.0",
+    "k-progress": "^1.5.0",
     "lodash": "^4.17.15",
     "pwacompat": "^2.0.9",
     "register-service-worker": "^1.6.2",
