--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@tensorflow/tfjs-converter": "^1.7.0",
     "@tensorflow/tfjs-core": "^1.7.0",
     "animate.css": "^4.1.0",
+    "animated-number-vue": "^1.0.0",
     "base64-to-jpg": "^1.0.1",
     "core-js": "^3.1.3",
     "downscale": "^1.0.6",
     "firebase": "^6.0.4",
     "firebase-admin": "^8.12.1",
+    "gsap": "^3.3.0",
     "is_js": "^0.9.0",
     "k-progress": "^1.5.0",
     "lodash": "^4.17.15",
@@ -39,6 +41,7 @@
     "vue-advanced-cropper": "^0.16.0",
     "vue-head": "^2.1.1",
     "vue-router": "^3.0.6",
+    "vue-simple-progress": "^1.1.1",
     "vue-star-rating": "^1.6.1",
     "vuex": "^3.1.1"
   },
