--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue-advanced-cropper": "^0.16.0",
     "vue-head": "^2.1.1",
     "vue-router": "^3.0.6",
+    "vue-simple-progress": "^1.1.1",
     "vue-star-rating": "^1.6.1",
     "vuex": "^3.1.1"
   },
