--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "downscale": "^1.0.6",
     "firebase": "^6.0.4",
     "firebase-admin": "^8.12.1",
+    "firebase-functions": "^3.7.0",
     "gsap": "^3.3.0",
     "is_js": "^0.9.0",
     "k-progress": "^1.5.0",
