--- a/package.json
+++ b/package.json
@@ -20,42 +20,46 @@
     "node": ">=9.3.0"
   },
   "dependencies": {
-    "@tensorflow-models/coco-ssd": "^2.0.1",
-    "@tensorflow/tfjs-converter": "^1.7.0",
-    "@tensorflow/tfjs-core": "^1.7.0",
+    "@tensorflow-models/coco-ssd": "^2.1.0",
+    "@tensorflow/tfjs-converter": "^1.7.4",
+    "@tensorflow/tfjs-core": "^1.7.4",
     "animate.css": "^4.1.0",
     "animated-number-vue": "^1.0.0",
     "base64-to-jpg": "^1.0.1",
-    "core-js": "^3.1.3",
+    "core-js": "^3.6.5",
     "downscale": "^1.0.6",
     "firebase": "^6.0.4",
-    "firebase-admin": "^8.12.1",
+    "firebase-admin": "^8.13.0",
     "firebase-functions": "^3.7.0",
-    "gsap": "^3.3.0",
+    "gsap": "^3.4.0",
     "is_js": "^0.9.0",
     "k-progress": "^1.5.0",
-    "lodash": "^4.17.15",
-    "pwacompat": "^2.0.9",
-    "register-service-worker": "^1.6.2",
+    "lodash": "^4.17.19",
+    "npm": "^5.10.0",
+    "nvm": "0.0.4",
+    "pwacompat": "^2.0.15",
+    "register-service-worker": "^1.7.1",
     "svg-loader": "0.0.2",
     "vue": "^2.6.10",
-    "vue-advanced-cropper": "^0.16.0",
+    "vue-advanced-cropper": "^0.16.8",
     "vue-head": "^2.1.1",
-    "vue-router": "^3.0.6",
+    "vue-router": "^3.3.4",
     "vue-simple-progress": "^1.1.1",
     "vue-star-rating": "^1.6.1",
-    "vuex": "^3.1.1"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.132",
-    "@vue/cli-plugin-babel": "^4.0.5",
-    "@vue/cli-plugin-e2e-cypress": "^4.0.5",
-    "@vue/cli-plugin-eslint": "^4.0.5",
+    "@babel/core": "^7.10.4",
+    "@babel/node": "^7.10.4",
+    "@types/lodash": "^4.14.157",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-e2e-cypress": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
     "@vue/cli-plugin-pwa": "^3.8.0",
-    "@vue/cli-plugin-unit-jest": "^4.0.5",
-    "@vue/cli-service": "^4.0.5",
+    "@vue/cli-plugin-unit-jest": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
     "@vue/eslint-config-prettier": "^5.0.0",
-    "@vue/test-utils": "^1.0.0-beta.29",
+    "@vue/test-utils": "^1.0.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.9.0",
@@ -66,23 +70,23 @@
     "change-case": "3.1.0",
     "compare-versions": "^3.4.0",
     "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^5.2.3",
-    "firebase-tools": "^7.6.2",
-    "inquirer": "^7.0.0",
-    "node-sass": "^4.12.0",
-    "ora": "^4.0.2",
+    "firebase-tools": "^7.16.2",
+    "inquirer": "^7.3.1",
+    "node-sass": "^4.14.1",
+    "ora": "^4.0.4",
     "prerender-spa-plugin": "^3.4.0",
     "read-pkg": "^5.1.1",
     "rimraf": "^3.0.0",
     "sass-loader": "^8.0.0",
-    "shelljs": "^0.8.3",
+    "shelljs": "^0.8.4",
     "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-merge": "^4.2.1",
     "write-pkg": "^4.0.0"
   },
