--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pwacompat": "^2.0.15",
     "register-service-worker": "^1.7.1",
     "svg-loader": "0.0.2",
+    "v-calendar": "^1.0.8",
     "vue": "^2.6.10",
     "vue-advanced-cropper": "^0.16.8",
     "vue-head": "^2.1.1",
