--- a/functions/package.json
+++ b/functions/package.json
@@ -3,19 +3,19 @@
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "lint": "eslint .",
-    "serve": "firebase serve --only functions",
+    "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "dependencies": {
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1",
-    "vuex": "^3.4.0"
+    "firebase-functions": "^3.8.0",
+    "lodash": "^4.17.19"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
